# swigex0

./: .gitignore  .zenodo.json  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_uninstall.cmake.in  version.h.in
.github/workflows/: coverage-test_python.yml  coverage-test_r.yml  coverage-tests.yml  coverage-tests_python.yml  coverage-tests_r.yml  dry-test.yml  dry-test_macos-11.yml  dry-test_python.yml  dry-test_r.yml  nonreg-test_linux.yml  nonreg-test_windows_visual.yml  nonreg-tests.yml  nonreg-tests_macos-11.yml  nonreg-tests_macos-12.yml  nonreg-tests_macos-latest.yml  nonreg-tests_macos-latest2.yml  nonreg-tests_macos.yml  nonreg-tests_ubuntu-latest.yml  nonreg-tests_windows-2019-msvc.yml  nonreg-tests_windows-2019-rtools.yml  nonreg-tests_windows-latest-msvc.yml  nonreg-tests_windows-latest-rtools.yml  publish.yml  publish2_python_macos-11.yml  publish_python.yml  publish_python_macos-10-11.yml  publish_python_macos-11.yml  publish_python_macos-12.yml  publish_python_macos.yml  publish_python_manylinux.yml  publish_python_ubuntu-16.yml  publish_python_ubuntu.yml  publish_python_windows-2019.yml  publish_python_windows-2019_macos-11.yml  publish_python_windows.yml  publish_r_linux.yml  publish_r_macos-11.yml  publish_r_macos-12.yml  publish_r_macos-14.yml  publish_r_macos.yml  (+6 more)
.github/workflows/install-swig-r-windows/: action.yml
.github/workflows/old/: publish_python_windows-2019_macos-11.yml
cmake/: cpp.cmake  install.cmake
docs/: README_Typemap
include/: args.hpp  fibo.hpp  myfibo.hpp  stdoutredirect.hpp  swigex0_define.hpp
python/: CMakeLists.txt  README.md  pyproject.toml.in  pyswigex0.i  setup.py.in  version.py.in
r/: CMakeLists.txt  DESCRIPTION.in  README.md  rswigex0.i
r/root/: FindR.cmake
src/: args.cpp  fibo.cpp  myfibo.cpp  stdoutredirect.cpp
swig/: swig_exp.i  swig_inc.i
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt  testFibo.cpp  testFibo.ref
tests/py/: CMakeLists.txt  test2.py  test2.ref  testFibo.py  testFibo.ref
tests/r/: CMakeLists.txt  test2.r  test2.ref  testFibo.r  testFibo.ref
